--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Covid-19
-description: This is a Libre AI initiative — www.libreai.com ; Dublin, Ireland.
+description: This is a Libre AI initiative — www.libreai.com ; Dublin, Ireland. 2020.
 github_username: libreai
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "covid-19"
