--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Covid-19
-description: This is a Libre AI initiative — www.libreai.com ; Dublin, Ireland. 2020.
+description: "This is a Libre AI initiative — www.libreai.com ; Made with ❤️ from quarantine. Dublin, Ireland. 2020."
 github_username: libreai
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "covid-19"
@@ -55,7 +55,7 @@ show_image: true
 show_tags: true
 
 # Add your Google Analytics ID here if you have one and want to use it
-google_analytics: ""
+google_analytics: "UA-122843448-2"
 
 exclude:
   - docker-compose.yml
