--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Covid-19
+title: COVID-19
 description: "This is a Libre AI initiative — www.libreai.com ; Made with ❤️from quarantine. Dublin, Ireland. 2020."
 github_username: libreai
 # you can comment the below line out if your repo name is not different than your baseurl
