--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: COVID-19
-description: "This is a Libre AI initiative — www.libreai.com ; Made with ❤️from quarantine. Dublin, Ireland. 2020."
+description: "This is a Libre AI initiative — www.libreai.com ; Made with ❤️from quarantine. Dublin, Ireland. 2020. CC BY-SA."
 github_username: libreai
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "covid-19"
